--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -31,3 +31,27 @@ body{
     margin: 0px auto;
     padding: 0px 15px;
 }
+.container-fluid {
+    max-width: 100%;
+    margin: 0px auto;
+    padding: 0px 30px;
+}
+
+@media (max-width: 720px){
+   .container-fluid {
+       padding: 15px;
+   }
+}
+.title{
+    color: $bg;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 60px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.rate-star{
+    display: inline-block;
+    margin-right: 13px;
+}
