--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -79,13 +79,13 @@
     &-title{
         margin-bottom: 10px;
         font-size: 48px;
-        font-weight: 700;
+        @include f700;
         line-height: 72px;
     }
     &-text{
         margin-bottom: 50px;
         font-size: 20px;
-        font-weight: 500;
+        @include f500;
         line-height: 30px;
     }
     &-form{
@@ -100,7 +100,7 @@
             height: 56px;
             border: none;
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
             outline: none;
             padding-left: 25px;
             padding-right: 60px;
@@ -109,6 +109,7 @@
             }
             &::placeholder{
                 color: #90a4ae;
+                @include f500;
             }
         }
         button{
@@ -185,7 +186,7 @@
     }
     &-title{
         color: $bg;
-        font-weight: 500;
+        @include f500;
         font-style: 18px;
         display: block;
     }
@@ -197,7 +198,7 @@
     &-price{
         font-size: 20px;
         color: $bg;
-        font-weight: 700;
+        @include f700;
     }
     &-info{
         display: flex;
@@ -222,14 +223,13 @@
     }
     span{
         font-size: 14px;
-        font-weight: 500;   
+        @include f500;
     }
 }
 &-star{
+    font-size: 12px;
     span{
         color: $bg;
-        font-weight: 700;
-        font-size: 12px;
     }
 }
 }
@@ -281,3 +281,57 @@
 }
 
 //end product slider
+
+// start advantages
+
+.advantages{
+    background-color: $bg;
+    padding: 110px 0;
+}
+.advantages__title{
+    color: #fff;
+}
+.advantages__inner {
+    display: flex;
+    justify-content: space-between;
+}
+.advantages__item {
+    max-width: 370px;
+    text-align: center;
+    padding: 0px 15px;
+    &:hover{
+        .advantages__item-images{
+            background-color: $green;
+        }
+        .advantages__item-title{
+            color: $green;
+        }
+        .advantages__item-images {
+            svg{
+                path {fill: #fff !important;}
+            }
+        }
+    }
+    &-images{
+        width: 114px;
+        height: 114px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto 30px;
+        transition: all .5s;
+    }
+    &-title{
+        margin-bottom: 25px;
+        font-size: 24px;
+        color: #fff;
+        @include f500;
+        transition: all .5s;
+    }
+    &-text{
+        font-size: 15px;
+    }
+}
+// end advantages
