--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -34,6 +34,18 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-search:before {
+    content: "\f002";
+}
+
+.icon-th-large:before {
+    content: "\f009";
+}
+
+.icon-th-list:before {
+    content: "\f00b";
+}
+
 .icon-map-marker:before {
     content: "\f041";
 }
@@ -42,8 +54,32 @@
     content: "\f07a";
 }
 
+.icon-heart-o:before {
+    content: "\f08a";
+}
+
 .icon-phone:before {
     content: "\f095";
+}
+
+.icon-caret-down:before {
+    content: "\f0d7";
+}
+
+.icon-caret-up:before {
+    content: "\f0d8";
+}
+
+.icon-sort:before {
+    content: "\f0dc";
+}
+
+.icon-unsorted:before {
+    content: "\f0dc";
+}
+
+.icon-comment-o:before {
+    content: "\f0e5";
 }
 
 .icon-bolt:before {
@@ -60,4 +96,8 @@
 
 .icon-location-arrow:before {
     content: "\f124";
+}
+
+.icon-sort-amount-desc:before {
+    content: "\f161";
 }
